--- a/compiler/rustc_error_codes/src/error_codes/E0001.md
+++ b/compiler/rustc_error_codes/src/error_codes/E0001.md
@@ -1,14 +1,16 @@
-#### Note: this error code is no longer emitted by the compiler.
+<!-- #### Note: this error code is no longer emitted by the compiler. -->
+#### 注記：このエラーコードは、発行されなくなりました。
 
-This error suggests that the expression arm corresponding to the noted pattern
-will never be reached as for all possible values of the expression being
-matched, one of the preceding patterns will match.
+<!-- This error suggests that the expression arm corresponding to the noted pattern will never be reached as for all possible values of the expression being matched, one of the preceding patterns will match. -->
+このエラーは、マッチする式の取りうるすべての値に対して、先行するパターンのいずれかとマッチするため、指摘されたパターンに対応する式のアームには決して到達しないことを示しています。
 
-This means that perhaps some of the preceding patterns are too general, this
-one is too specific or the ordering is incorrect.
+<!-- This means that perhaps some of the preceding patterns are too general, this one is too specific or the ordering is incorrect. -->
+これは、先行するパターンのうち、いくつかが一般的すぎたり、特殊すぎたり、あるいは順番が間違っていることを意味しています。
 
-For example, the following `match` block has too many arms:
+<!-- For example, the following `match` block has too many arms: -->
+たとえば、次の `match` 式は、アームの数が多すぎます：
 
+<!--
 ```
 match Some(0) {
     Some(bar) => {/* ... */}
@@ -16,9 +18,18 @@ match Some(0) {
     _ => {/* ... */} // All possible cases have already been handled
 }
 ```
+-->
+```
+match Some(0) {
+    Some(bar) => {/* ... */}
+    x => {/* ... */} // これは、`None` のケースを処理する
+    _ => {/* ... */} // すべての取りうるケースは処理済みである
+}
+```
 
-`match` blocks have their patterns matched in order, so, for example, putting
-a wildcard arm above a more specific arm will make the latter arm irrelevant.
+<!-- `match` blocks have their patterns matched in order, so, for example, putting a wildcard arm above a more specific arm will make the latter arm irrelevant. -->
+`match` 式は、先頭のパターンから順に評価されるので、たとえば、より具体的なアームの上流にワイルドカードのアームを配置すると、下流のアームが評価されることはありません。
 
-Ensure the ordering of the match arm is correct and remove any superfluous
-arms.
+<!-- Ensure the ordering of the match arm is correct and remove any superfluous arms. -->
+アームの順序が正しいことを確認し、余分なアームを削除してください。
+
