--- a/compiler/rustc_error_codes/src/error_codes/E0005.md
+++ b/compiler/rustc_error_codes/src/error_codes/E0005.md
@@ -1,17 +1,32 @@
+<!--
 Patterns used to bind names must be irrefutable, that is, they must guarantee
 that a name will be extracted in all cases.
+-->
+名前の結合に用いられるパターンは、反証の余地がないように、あらゆるケースで名前が抽出されることが保証されている必要があります。
 
-Erroneous code example:
+<!-- Erroneous code example: -->
+エラーとなるコードの例：
 
+<!--
 ```compile_fail,E0005
 let x = Some(1);
 let Some(y) = x;
 // error: refutable pattern in local binding: `None` not covered
 ```
+-->
+```compile_fail,E0005
+let x = Some(1);
+let Some(y) = x;
+// エラー： ローカルバインディングに反証の余地があります：`None` が対象外です
+```
 
+<!--
 If you encounter this error you probably need to use a `match` or `if let` to
 deal with the possibility of failure. Example:
+-->
+このエラーが発生する場合、`match` や `if let` を用いて、失敗の可能性に対処する必要があります。修正例：
 
+<!--
 ```
 let x = Some(1);
 
@@ -26,5 +41,22 @@ match x {
 
 if let Some(y) = x {
     // do something
+}
+```
+-->
+```
+let x = Some(1);
+
+match x {
+    Some(y) => {
+        // なんらかの処理
+    },
+    None => {}
+}
+
+// あるいは：
+
+if let Some(y) = x {
+    // なんらかの処理
 }
 ```
