--- a/compiler/rustc_error_codes/src/error_codes/E0010.md
+++ b/compiler/rustc_error_codes/src/error_codes/E0010.md
@@ -1,8 +1,12 @@
+<!--
 The value of statics and constants must be known at compile time, and they live
 for the entire lifetime of a program. Creating a boxed value allocates memory on
 the heap at runtime, and therefore cannot be done at compile time.
+-->
+静的な値や定数の値はコンパイル時に確定している必要があり、プログラムのライフタイム全体にわたり存続し続けます。ボックス化された値を作成すると、実行時にヒープ領域にメモリが確保されるためコンパイル時に値を確定することができません。
 
-Erroneous code example:
+<!-- Erroneous code example: -->
+エラーとなるコードの例：
 
 ```compile_fail,E0010
 #![feature(box_syntax)]
