--- a/compiler/rustc_error_codes/src/error_codes/E0015.md
+++ b/compiler/rustc_error_codes/src/error_codes/E0015.md
@@ -1,8 +1,13 @@
+<!--
 A constant item was initialized with something that is not a constant
 expression.
+-->
+定数の項目が定数でないもので初期化されています。
 
-Erroneous code example:
+<!-- Erroneous code example: -->
+エラーとなるコードの例：
 
+<!--
 ```compile_fail,E0015
 fn create_some() -> Option<u8> {
     Some(1)
@@ -10,12 +15,25 @@ fn create_some() -> Option<u8> {
 
 const FOO: Option<u8> = create_some(); // error!
 ```
+-->
+```compile_fail,E0015
+fn create_some() -> Option<u8> {
+    Some(1)
+}
 
+const FOO: Option<u8> = create_some(); // エラー発生個所！
+```
+
+<!--
 The only functions that can be called in static or constant expressions are
 `const` functions, and struct/enum constructors.
+-->
+静的な式や定数式で呼び出しが可能な関数は`const`関数と構造体や列挙体のコンストラクタのみです。
 
-To fix this error, you can declare `create_some` as a constant function:
+<!-- To fix this error, you can declare `create_some` as a constant function: -->
+このエラーを解消するには、下記のように `create_some` 関数を、定数を返す const 関数として宣言します：
 
+<!--
 ```
 const fn create_some() -> Option<u8> { // declared as a const function
     Some(1)
@@ -24,6 +42,22 @@ const fn create_some() -> Option<u8> { // declared as a const function
 const FOO: Option<u8> = create_some(); // ok!
 
 // These are also working:
+struct Bar {
+    x: u8,
+}
+
+const OTHER_FOO: Option<u8> = Some(1);
+const BAR: Bar = Bar {x: 1};
+```
+-->
+```
+const fn create_some() -> Option<u8> { // const 関数として宣言
+    Some(1)
+}
+
+const FOO: Option<u8> = create_some(); // ok!
+
+// 以降も動作します：
 struct Bar {
     x: u8,
 }
