--- a/compiler/rustc_error_codes/src/error_codes/E0023.md
+++ b/compiler/rustc_error_codes/src/error_codes/E0023.md
@@ -1,7 +1,10 @@
-A pattern attempted to extract an incorrect number of fields from a variant.
+<!-- A pattern attempted to extract an incorrect number of fields from a variant. -->
+パターンは、バリアントから実際と異なるフィールドの数で抽出しようとしました。
 
-Erroneous code example:
+<!-- Erroneous code example: -->
+エラーとなるコードの例：
 
+<!--
 ```compile_fail,E0023
 enum Fruit {
     Apple(String, String),
@@ -15,12 +18,31 @@ match x {
     _ => {}
 }
 ```
+-->
+```compile_fail,E0023
+enum Fruit {
+    Apple(String, String),
+    Pear(u32),
+}
 
+let x = Fruit::Apple(String::new(), String::new());
+
+match x {
+    Fruit::Apple(a) => {}, // エラー発生個所！
+    _ => {}
+}
+```
+
+<!--
 A pattern used to match against an enum variant must provide a sub-pattern for
 each field of the enum variant.
+-->
+列挙体バリアントとのマッチングに使用するパターンは、列挙体バリアントの各フィールドに呼応するサブパターンを用意する必要があります。
 
-Here the `Apple` variant has two fields, and should be matched against like so:
+<!-- Here the `Apple` variant has two fields, and should be matched against like so: -->
+この例での `Apple` バリアントは2つのフィールドを持っているので、次のようにマッチさせる必要があります：
 
+<!--
 ```
 enum Fruit {
     Apple(String, String),
@@ -35,9 +57,26 @@ match x {
     _ => {}
 }
 ```
+-->
+```
+enum Fruit {
+    Apple(String, String),
+    Pear(u32),
+}
 
-Matching with the wrong number of fields has no sensible interpretation:
+let x = Fruit::Apple(String::new(), String::new());
 
+// 正しい記述はこうなります。
+match x {
+    Fruit::Apple(a, b) => {},
+    _ => {}
+}
+```
+
+<!-- Matching with the wrong number of fields has no sensible interpretation: -->
+次のように、実際と異なるフィールドの数でマッチングすることは間違いです：
+
+<!--
 ```compile_fail,E0023
 enum Fruit {
     Apple(String, String),
@@ -52,6 +91,25 @@ match x {
     Fruit::Apple(a, b, c) => {},
 }
 ```
+-->
+```compile_fail,E0023
+enum Fruit {
+    Apple(String, String),
+    Pear(u32),
+}
 
+let x = Fruit::Apple(String::new(), String::new());
+
+// 間違った記述はこうです。
+match x {
+    Fruit::Apple(a) => {},
+    Fruit::Apple(a, b, c) => {},
+}
+```
+
+<!--
 Check how many fields the enum was declared with and ensure that your pattern
 uses the same number.
+-->
+このエラーが出たときは、列挙体がいくつのフィールドで宣言されているかを確認し、パターンはその数に呼応する記述をするようにしてください。
+
