--- a/compiler/rustc_error_codes/src/error_codes/E0023.md
+++ b/compiler/rustc_error_codes/src/error_codes/E0023.md
@@ -74,7 +74,7 @@ match x {
 ```
 
 <!-- Matching with the wrong number of fields has no sensible interpretation: -->
-次のように、実際と異なるフィールドの数でマッチングすることは間違いです：
+次のように、実際と異なるフィールドの数でマッチングしようとしても、無意味です：
 
 <!--
 ```compile_fail,E0023
