--- a/compiler/rustc_error_codes/src/error_codes/E0004.md
+++ b/compiler/rustc_error_codes/src/error_codes/E0004.md
@@ -6,10 +6,11 @@ determine the flow of execution.
 -->
 このエラーは、コンパイラーが、match 式の取りうる入力値に対して、パターンマッチを保証できないことを示しています。match 式に値を割り当てたり、あるいは分岐処理を確定するためにはパターンマッチの保証が必要です。
 
-<!-- Erroneous code example: -->
+<!--
+Erroneous code example:
+-->
 エラーとなるコードの例：
 
-<!--
 ```compile_fail,E0004
 enum Terminator {
     HastaLaVistaBaby,
@@ -19,19 +20,7 @@ enum Terminator {
 let x = Terminator::HastaLaVistaBaby;
 
 match x { // error: non-exhaustive patterns: `HastaLaVistaBaby` not covered
-    Terminator::TalkToMyHand => {}
-}
-```
--->
-```compile_fail,E0004
-enum Terminator {
-    HastaLaVistaBaby,
-    TalkToMyHand,
-}
-
-let x = Terminator::HastaLaVistaBaby;
-
-match x { // エラー発生個所：パターンが網羅されていません：`HastaLaVistaBaby` は対象外です。
+          // エラー発生個所：パターンが網羅されていません：`HastaLaVistaBaby` は対象外です。
     Terminator::TalkToMyHand => {}
 }
 ```
@@ -45,7 +34,6 @@ underscore `_` wildcard pattern can be added after all other patterns to match
 -->
 このエラーが発生する場合は、入力の値が取り得るすべての値にマッチするようにパターンを変更する必要があります。`enum`などの、派生の数が少ない型は、すべてのケースを明示的にカバーする必要があります。あるいは、`_`(アンダースコア)と呼ばれるワイルドカードパターンを他のすべてのパターンの下流に追加して、「その他のもの」にマッチさせることもできます。修正例：
 
-<!--
 ```
 enum Terminator {
     HastaLaVistaBaby,
@@ -60,26 +48,6 @@ match x {
 }
 
 // or:
-
-match x {
-    Terminator::TalkToMyHand => {}
-    _ => {}
-}
-```
--->
-```
-enum Terminator {
-    HastaLaVistaBaby,
-    TalkToMyHand,
-}
-
-let x = Terminator::HastaLaVistaBaby;
-
-match x {
-    Terminator::TalkToMyHand => {}
-    Terminator::HastaLaVistaBaby => {}
-}
-
 // あるいは：
 
 match x {
