--- a/compiler/rustc_error_codes/src/error_codes/E0010.md
+++ b/compiler/rustc_error_codes/src/error_codes/E0010.md
@@ -5,7 +5,9 @@ the heap at runtime, and therefore cannot be done at compile time.
 -->
 静的な値や定数の値はコンパイル時に確定している必要があり、プログラムのライフタイム全体にわたり存続し続けます。ボックス化された値を作成すると、実行時にヒープ領域にメモリが確保されるためコンパイル時に値を確定することができません。
 
-<!-- Erroneous code example: -->
+<!--
+Erroneous code example:
+-->
 エラーとなるコードの例：
 
 ```compile_fail,E0010
