--- a/compiler/rustc_error_codes/src/error_codes/E0013.md
+++ b/compiler/rustc_error_codes/src/error_codes/E0013.md
@@ -4,7 +4,9 @@ variable cannot refer to a static variable.
 -->
 静的変数とconst変数は、ほかのconst変数を参照することができますが、const変数は静的変数を参照できません。
 
-<!-- Erroneous code example: -->
+<!--
+Erroneous code example:
+-->
 エラーとなるコードの例：
 
 ```compile_fail,E0013
@@ -16,7 +18,7 @@ const Y: i32 = X;
 In this example, `Y` cannot refer to `X`. To fix this, the value can be
 extracted as a const and then used:
 -->
-今回のように、const変数 `Y` は、静的変数 `X` を参照できません。このエラーを解消するには、下記のように一旦 const 定数として抽出する必要があります：
+このように、const変数 `Y` は、静的変数 `X` を参照できません。このエラーを解消するには、下記のように const 定数として抽出しておく必要があります：
 
 ```
 const A: i32 = 42;
