--- a/compiler/rustc_error_codes/src/error_codes/E0023.md
+++ b/compiler/rustc_error_codes/src/error_codes/E0023.md
@@ -1,10 +1,13 @@
-<!-- A pattern attempted to extract an incorrect number of fields from a variant. -->
+<!--
+A pattern attempted to extract an incorrect number of fields from a variant.
+-->
 パターンは、バリアントから実際と異なるフィールドの数で抽出しようとしました。
 
-<!-- Erroneous code example: -->
+<!--
+Erroneous code example:
+-->
 エラーとなるコードの例：
 
-<!--
 ```compile_fail,E0023
 enum Fruit {
     Apple(String, String),
@@ -15,20 +18,7 @@ let x = Fruit::Apple(String::new(), String::new());
 
 match x {
     Fruit::Apple(a) => {}, // error!
-    _ => {}
-}
-```
--->
-```compile_fail,E0023
-enum Fruit {
-    Apple(String, String),
-    Pear(u32),
-}
-
-let x = Fruit::Apple(String::new(), String::new());
-
-match x {
-    Fruit::Apple(a) => {}, // エラー発生個所！
+                           // エラー発生個所！
     _ => {}
 }
 ```
@@ -39,10 +29,11 @@ each field of the enum variant.
 -->
 列挙体バリアントとのマッチングに使用するパターンは、列挙体バリアントの各フィールドに呼応するサブパターンを用意する必要があります。
 
-<!-- Here the `Apple` variant has two fields, and should be matched against like so: -->
+<!--
+Here the `Apple` variant has two fields, and should be matched against like so:
+-->
 この例での `Apple` バリアントは2つのフィールドを持っているので、次のようにマッチさせる必要があります：
 
-<!--
 ```
 enum Fruit {
     Apple(String, String),
@@ -52,31 +43,18 @@ enum Fruit {
 let x = Fruit::Apple(String::new(), String::new());
 
 // Correct.
+// 正しくはこうです。
 match x {
     Fruit::Apple(a, b) => {},
     _ => {}
 }
 ```
--->
-```
-enum Fruit {
-    Apple(String, String),
-    Pear(u32),
-}
-
-let x = Fruit::Apple(String::new(), String::new());
-
-// 正しい記述はこうなります。
-match x {
-    Fruit::Apple(a, b) => {},
-    _ => {}
-}
-```
-
-<!-- Matching with the wrong number of fields has no sensible interpretation: -->
-次のように、実際と異なるフィールドの数でマッチングしようとしても、無意味です：
 
 <!--
+Matching with the wrong number of fields has no sensible interpretation:
+-->
+次のように、実際と異なるフィールドの数でマッチングしようとしても、無意味です：
+
 ```compile_fail,E0023
 enum Fruit {
     Apple(String, String),
@@ -86,21 +64,7 @@ enum Fruit {
 let x = Fruit::Apple(String::new(), String::new());
 
 // Incorrect.
-match x {
-    Fruit::Apple(a) => {},
-    Fruit::Apple(a, b, c) => {},
-}
-```
--->
-```compile_fail,E0023
-enum Fruit {
-    Apple(String, String),
-    Pear(u32),
-}
-
-let x = Fruit::Apple(String::new(), String::new());
-
-// 間違った記述はこうです。
+// 誤りはこうです。
 match x {
     Fruit::Apple(a) => {},
     Fruit::Apple(a, b, c) => {},
@@ -112,4 +76,3 @@ Check how many fields the enum was declared with and ensure that your pattern
 uses the same number.
 -->
 このエラーが出たときは、列挙体がいくつのフィールドで宣言されているかを確認し、パターンはその数に呼応する記述をするようにしてください。
-
