--- a/compiler/rustc_error_codes/src/error_codes/E0025.md
+++ b/compiler/rustc_error_codes/src/error_codes/E0025.md
@@ -1,6 +1,12 @@
+<!--
 Each field of a struct can only be bound once in a pattern.
+-->
+構造体の各フィールドは、１つのパターンで１回だけ結合できます。
 
+<!--
 Erroneous code example:
+-->
+エラーとなるコードの例：
 
 ```compile_fail,E0025
 struct Foo {
@@ -13,12 +19,16 @@ fn main(){
 
     let Foo { a: x, a: y } = x;
     // error: field `a` bound multiple times in the pattern
+    // エラー発生個所：フィールド `a` がパターン内で複数回結合されています。
 }
 ```
 
+<!--
 Each occurrence of a field name binds the value of that field, so to fix this
 error you will have to remove or alter the duplicate uses of the field name.
 Perhaps you misspelled another field name? Example:
+-->
+このエラーを解消するには、下記の例のようにフィールド名の重複個所を削除するか変更する必要があります。もしかしたら、別のフィールド名のスペルを間違えていませんか？
 
 ```
 struct Foo {
